edit in home section

--- a/index.html
+++ b/index.html
@@ -814,6 +814,60 @@
 </section><!-- End Meet Our Team -->
 
 
+<section class="blog">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="sub_title">
+                    <h2>Our Latest Blog</h2>
+                    <p>Lorem ipsum dolor sit amet mollis felis dapibus arcu donec viverra. Pede phasellus eget. Etiam maecenas vel vici quis dictum rutrum nec nisi et.</p>  
+                </div><!-- ends: .section-header -->
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4">
+                 <div class="single_item single_item_first">
+                    <div class="blog-img">
+                        <a href="#" title=""><img src="images/blog/blog_1.jpg" alt="" class="img-fluid"></a>
+                    </div>
+                    <div class="blog_title">
+                        <span>LeaderShip Development</span>  
+                        <h3><a href="#" title="">How to Become Master In <br>CSS within qa Week.</a></h3> 
+                        <div class="post_bloger">
+                            <span>15/02/2018 - By </span> <span class="bloger_name"> James Colins</span>
+                        </div>               
+                    </div>   
+                </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4">
+                <div class="single_item single_item_center">
+                     <div class="blog-img">
+                        <a href="#" title=""><img src="images/blog/blog_2.jpg" alt="" class="img-fluid"></a>
+                    </div>
+                    <div class="blog_title">
+                        <span>LeaderShip Development</span>  
+                        <h3><a href="#" title="">Students work together to <br>solve a problem.</a></h3> 
+                        <div class="post_bloger">
+                            <span>15/02/2018 - By </span> <span class="bloger_name"> Jhon Deo</span>
+                        </div>               
+                    </div>   
+                </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4">
+               <div class="single_item single_item_last">
+                     <div class="blog-img">
+                        <a href="#" title=""><img src="images/blog/blog_3.jpg" alt="" class="img-fluid"></a>
+                    </div>
+                    <div class="blog_title">
+                        <span>LeaderShip Development</span>  
+                        <h3><a href="#" title="">How to Become Master In <br>CSS within qa Week.</a></h3> 
+                        <div class="post_bloger">
+                            <span>15/02/2018 - By </span> <span class="bloger_name"> Simon Stain</span>
+                        </div>               
+                    </div>   
+                </div>
+            </div>
+        </div>
+    </div>
+</section><!-- End Blog  -->
 
 
 
