--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@
                                     </div>
                                 </div>
                                 <div class="cart_calculate_wrapper">
-                                    <div class="calculate_price"><span>Sub-Total :</span><span>$300.00</span></div>
-                                    <div class="calculate_price"><span>Eco Tax (-2.00) :</span><span>$5.00</span></div>                                    
-                                    <div class="calculate_price"><span>VAT (20%) :</span><span>$25.00</span></div>                                    
-                                    <div class="calculate_price"><span>Total </span><span class="total_price">$330.00</span></div>
+                                    <div class="calculate_price"><span>Sub-Total :</span><span>Free</span></div>
+                                    <div class="calculate_price"><span>Eco Tax  :</span><span>Free</span></div>                                    
+                                    <div class="calculate_price"><span>VAT  :</span><span>$25.00</span></div>                                    
+                                    <div class="calculate_price"><span>Total </span><span class="total_price">Free</span></div>
                                 </div>
                                 <div class="purchase_btn d-flex justify-content-between">
                                     <a class="cart_button" href="#">view cart</a>
@@ -206,12 +206,12 @@
 								<div class="dropdown dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 									<div class="all-categories "><span>Categories</span> <i class="cat_icon flaticon-down-arrow"></i></div>
 									<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-										<li class="dropdown-item" >Action</li>
-										<li class="dropdown-item" >Another action</li>
-										<li class="dropdown-item" >Action</li>
-										<li class="dropdown-item" >Another action</li>
-										<li class="dropdown-item" >Action</li>
-										<li class="dropdown-item" >Another action</li>
+										<li class="dropdown-item" >Design</li>
+										<li class="dropdown-item" >Finance</li>
+										<li class="dropdown-item" >Marketing</li>
+										<li class="dropdown-item" > Photography</li>
+										<li class="dropdown-item" >Science</li>
+										<li class="dropdown-item" >Web Development</li>
 									</ul>
 								</div>
 								<div class="form-group d-flex">
@@ -829,11 +829,11 @@
             <div class="col-12 col-sm-6 col-md-4 col-lg-4">
                  <div class="single_item single_item_first">
                     <div class="blog-img">
-                        <a href="#" title=""><img src="images/blog/blog_1.jpg" alt="" class="img-fluid"></a>
+                        <a href="blog.html" title=""><img src="images/blog/blog_1.jpg" alt="" class="img-fluid"></a>
                     </div>
                     <div class="blog_title">
                         <span>LeaderShip Development</span>  
-                        <h3><a href="#" title="">How to Become Master In <br>CSS within qa Week.</a></h3> 
+                        <h3><a href="blog.html" title="">How to Become Master In <br>CSS within qa Week.</a></h3> 
                         <div class="post_bloger">
                             <span>15/02/2018 - By </span> <span class="bloger_name"> James Colins</span>
                         </div>               
@@ -843,7 +843,7 @@
             <div class="col-12 col-sm-6 col-md-4 col-lg-4">
                 <div class="single_item single_item_center">
                      <div class="blog-img">
-                        <a href="#" title=""><img src="images/blog/blog_2.jpg" alt="" class="img-fluid"></a>
+                        <a href="blog.html" title=""><img src="images/blog/blog_2.jpg" alt="" class="img-fluid"></a>
                     </div>
                     <div class="blog_title">
                         <span>LeaderShip Development</span>  
@@ -857,11 +857,11 @@
             <div class="col-12 col-sm-6 col-md-4 col-lg-4">
                <div class="single_item single_item_last">
                      <div class="blog-img">
-                        <a href="#" title=""><img src="images/blog/blog_3.jpg" alt="" class="img-fluid"></a>
+                        <a href="blog.html" title=""><img src="images/blog/blog_3.jpg" alt="" class="img-fluid"></a>
                     </div>
                     <div class="blog_title">
                         <span>LeaderShip Development</span>  
-                        <h3><a href="#" title="">How to Become Master In <br>CSS within qa Week.</a></h3> 
+                        <h3><a href="blog.html" title="">How to Become Master In <br>CSS within qa Week.</a></h3> 
                         <div class="post_bloger">
                             <span>15/02/2018 - By </span> <span class="bloger_name"> Simon Stain</span>
                         </div>               
