--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	<div class="edu_nav">
         <div class="container">
             <nav class="navbar navbar-expand-md navbar-light bg-faded">
-                <a class="navbar-brand" href="index-2.html"><img src="images/logo.png" alt="logo"></a>
+                <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
                 <div class="collapse navbar-collapse main-menu" id="navbarSupportedContent">
                     <ul class="navbar-nav nav lavalamp ml-auto menu">
 
@@ -151,7 +151,7 @@
                                     </div>
                                     <div class="cart_info">
                                         <h4><a href="#">Make Better Decisions</a></h4>
-                                        <span class="price">$135.00 <span>x 1</span></span>
+                                        <span class="price">Free <span>x 1</span></span>
                                     </div>
                                     <div class="del-icon">
                                         <i class="fas fa-times"></i>
@@ -163,7 +163,7 @@
                                     </div>
                                     <div class="cart_info">
                                         <h4><a href="#">How To Be A Speaker</a></h4>
-                                        <span class="price">$165.00 <span>x 1</span></span>
+                                        <span class="price">Free <span>x 1</span></span>
                                     </div>
                                     <div class="del-icon">
                                         <i class="fas fa-times"></i>
@@ -172,7 +172,7 @@
                                 <div class="cart_calculate_wrapper">
                                     <div class="calculate_price"><span>Sub-Total :</span><span>Free</span></div>
                                     <div class="calculate_price"><span>Eco Tax  :</span><span>Free</span></div>                                    
-                                    <div class="calculate_price"><span>VAT  :</span><span>$25.00</span></div>                                    
+                                    <div class="calculate_price"><span>VAT  :</span><span>free</span></div>                                    
                                     <div class="calculate_price"><span>Total </span><span class="total_price">Free</span></div>
                                 </div>
                                 <div class="purchase_btn d-flex justify-content-between">
@@ -445,15 +445,15 @@
 			<div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_1.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_1.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
                             <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
                         <div class="courses_title">
-                            <h3><a href="#">Make Better Decisions</a></h3>
-                            <div class="teachers_name">Teacher - <a href="#" title="">Jhonthan Smith</a></div>
+                            <h3><a href="course-details.html">Make Better Decisions</a></h3>
+                            <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">Jhonthan Smith</a></div>
                         </div>
                         <div class="courses_info">
                             <ul class="list-unstyled">
@@ -471,15 +471,15 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_2.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_2.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
                             <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
                         <div class="courses_title">
-                            <h3><a href="#">How To Be A Speaker</a></h3>
-                            <div class="teachers_name">Teacher - <a href="#" title="">Denise Wood</a></div>
+                            <h3><a href="course-details.html">How To Be A Speaker</a></h3>
+                            <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">Denise Wood</a></div>
                         </div>
                         <div class="courses_info">
                             <ul class="list-unstyled">
@@ -495,15 +495,15 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
                             <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
                         <div class="courses_title">
-                            <h3><a href="#">Network Introductions</a></h3>
-                            <div class="teachers_name">Teacher - <a href="#" title="">Preston Marshall</a></div>
+                            <h3><a href="course-details.html">Network Introductions</a></h3>
+                            <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">Preston Marshall</a></div>
                         </div>
                         <div class="courses_info">
                             <ul class="list-unstyled">
@@ -519,15 +519,15 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_4.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_4.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
                             <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
                         <div class="courses_title">
-                            <h3><a href="#">Brand Management</a></h3>
-                            <div class="teachers_name">Teacher - <a href="#" title="">John Porter</a></div>
+                            <h3><a href="course-details.html">Brand Management</a></h3>
+                            <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">John Porter</a></div>
                         </div>
                         <div class="courses_info">
                             <ul class="list-unstyled">
@@ -543,15 +543,15 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_5.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_5.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
                             <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
                         <div class="courses_title">
-                            <h3><a href="#">Moralities Of Everyday</a></h3>
-                            <div class="teachers_name">Teacher - <a href="#" title="">Mittie Hill</a></div>
+                            <h3><a href="course-details.html">Moralities Of Everyday</a></h3>
+                            <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">Mittie Hill</a></div>
                         </div>
                         <div class="courses_info">
                             <ul class="list-unstyled">
@@ -567,15 +567,15 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_6.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_6.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
                             <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
                         <div class="courses_title">
-                            <h3><a href="#">Life Coach Training</a></h3>
-                            <div class="teachers_name">Teacher - <a href="#" title="">Marian Dupre</a></div>
+                            <h3><a href="course-details.html">Life Coach Training</a></h3>
+                            <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">Marian Dupre</a></div>
                         </div>
                         <div class="courses_info">
                             <ul class="list-unstyled">
@@ -723,7 +723,7 @@
 						<p>Lorem ipsum dolor sit amet mollis felis dapibus arcu donec viverra. Pede phasellus eget. Etiam maecenas vel vici quis dictum rutrum nec nisi et.</p>  
 					</div><!-- ends: .section-header -->
 					<div class="envent_all_view">
-						<a href="#" title="">View All</a>
+						<a href="team.html" title="">View All</a>
 					</div>
 				</div> 
 			</div>
