--- a/Design.html
+++ b/Design.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta name="author" content="Ecology Theme">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eduwise - Education HTML5 Template</title>
+    <title>Eduwise</title>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <!-- Goole Font -->
     <link href="https://fonts.googleapis.com/css?family=Rubik:400,500,700" rel="stylesheet">
@@ -73,7 +73,7 @@
     <div class="edu_nav ">
         <div class="container">
             <nav class="navbar navbar-expand-md navbar-light bg-faded">
-                <a class="navbar-brand" href="index-2.html"><img src="images/logo.png" alt="logo"></a>
+                <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
                 <div class="collapse navbar-collapse main-menu" id="navbarSupportedContent">
                     <ul class="navbar-nav nav lavalamp ml-auto menu">
                         <li class="nav-item"><a href="index.html" class="nav-link">Home</a>
@@ -160,7 +160,7 @@
                     <div class="intro_text">
                         <h1>Courese Page</h1>
                         <div class="pages_links">
-                            <a href="#" title="">Home</a>
+                            <a href="index.html" title="">Home</a>
                             <a href="#" title="" class="active">Course Page</a>
                         </div>
                     </div>
@@ -274,15 +274,15 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_1.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_1.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
                             <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
                         <div class="courses_title">
-                            <h3><a href="#">Make Better Decisions</a></h3>
-                            <div class="teachers_name">Teacher - <a href="#" title="">Jhonthan Smith</a></div>
+                            <h3><a href="course-details.html">Make Better Decisions</a></h3>
+                            <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">Jhonthan Smith</a></div>
                         </div>
                         <div class="courses_info">
                             <ul class="list-unstyled">
@@ -300,15 +300,15 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_2.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_2.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
                             <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
                         <div class="courses_title">
-                            <h3><a href="#">How To Be A Speaker</a></h3>
-                            <div class="teachers_name">Teacher - <a href="#" title="">Denise Wood</a></div>
+                            <h3><a href="course-details.html">How To Be A Speaker</a></h3>
+                            <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">Denise Wood</a></div>
                         </div>
                         <div class="courses_info">
                             <ul class="list-unstyled">
@@ -324,15 +324,15 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
                             <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
                         <div class="courses_title">
-                            <h3><a href="#">Network Introductions</a></h3>
-                            <div class="teachers_name">Teacher - <a href="#" title="">Preston Marshall</a></div>
+                            <h3><a href="course-details.html">Network Introductions</a></h3>
+                            <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">Preston Marshall</a></div>
                         </div>
                         <div class="courses_info">
                             <ul class="list-unstyled">
@@ -348,15 +348,15 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_4.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_4.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
-                            <a href="#" class="read_more-btn">Free$</a>
+                            <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
                         <div class="courses_title">
-                            <h3><a href="#">Brand Management</a></h3>
-                            <div class="teachers_name">Teacher - <a href="#" title="">John Porter</a></div>
+                            <h3><a href="course-details.html">Brand Management</a></h3>
+                            <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">John Porter</a></div>
                         </div>
                         <div class="courses_info">
                             <ul class="list-unstyled">
@@ -372,15 +372,15 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_5.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_5.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
                             <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
                         <div class="courses_title">
-                            <h3><a href="#">Moralities Of Everyday</a></h3>
-                            <div class="teachers_name">Teacher - <a href="#" title="">Mittie Hill</a></div>
+                            <h3><a href="course-details.html">Moralities Of Everyday</a></h3>
+                            <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">Mittie Hill</a></div>
                         </div>
                         <div class="courses_info">
                             <ul class="list-unstyled">
@@ -396,15 +396,15 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_6.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_6.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
                             <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
                         <div class="courses_title">
-                            <h3><a href="#">Life Coach Training</a></h3>
-                            <div class="teachers_name">Teacher - <a href="#" title="">Marian Dupre</a></div>
+                            <h3><a href="course-details.html">Life Coach Training</a></h3>
+                            <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">Marian Dupre</a></div>
                         </div>
                         <div class="courses_info">
                             <ul class="list-unstyled">
@@ -419,15 +419,15 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
                             <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
                         <div class="courses_title">
-                            <h3><a href="#">Brand Management</a></h3>
-                            <div class="teachers_name">Teacher - <a href="#" title="">John Porter</a></div>
+                            <h3><a href="course-details.html">Brand Management</a></h3>
+                            <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">John Porter</a></div>
                         </div>
                         <div class="courses_info">
                             <ul class="list-unstyled">
@@ -443,15 +443,15 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_1.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_1.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
                             <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
                         <div class="courses_title">
-                            <h3><a href="#">Moralities Of Everyday</a></h3>
-                            <div class="teachers_name">Teacher - <a href="#" title="">Mittie Hill</a></div>
+                            <h3><a href="course-details.html">Moralities Of Everyday</a></h3>
+                            <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">Mittie Hill</a></div>
                         </div>
                         <div class="courses_info">
                             <ul class="list-unstyled">
@@ -467,15 +467,15 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_2.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_2.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
                             <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
                         <div class="courses_title">
-                            <h3><a href="#">Life Coach Training</a></h3>
-                            <div class="teachers_name">Teacher - <a href="#" title="">Marian Dupre</a></div>
+                            <h3><a href="course-details.html">Life Coach Training</a></h3>
+                            <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">Marian Dupre</a></div>
                         </div>
                         <div class="courses_info">
                             <ul class="list-unstyled">
