--- a/video_player.html
+++ b/video_player.html
@@ -86,6 +86,18 @@
                                     <li class="nav-item"><a href="course-details.html" class="nav-link">Courses Details</a></li>
                                 </ul> 
                             </li>
+                            <li class="nav-item"><a href="course.html" class="nav-link">Categories</a>
+                                <ul class="navbar-nav nav mx-auto">
+                                    <li class="nav-item"><a href="Design.html" class="nav-link">Design</a></li>
+                                    <li class="nav-item"><a href="Finance.html" class="nav-link">Finance</a></li>
+                                    <li class="nav-item"><a href="Marketing.html" class="nav-link">Marketing</a></li>
+                                    <li class="nav-item"><a href="Photography.html" class="nav-link">Photography</a></li>
+                                    <li class="nav-item"><a href="Science.html" class="nav-link">Science</a></li>
+                                    <li class="nav-item"><a href="Web Development.html" class="nav-link">Web Development</a></li>
+                                    
+                                   
+                                </ul> 
+                            </li>
                             <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a>
                                 <!-- <ul class="navbar-nav nav mx-auto">
                                     <li class="nav-item"><a href="blog.html" class="nav-link">Blog List</a></li> 
@@ -101,7 +113,8 @@
                                             <li class="nav-item"><a href="course.html" class="nav-link active">Courses</a></li>
                                             <li class="nav-item"><a href="course-details.html" class="nav-link">Courses Details</a></li>
                                         </ul>    
-                                    </li>                                 
+                                    </li>      
+
                                     <li class="nav-item"><a href="#" class="nav-link dropdown_icon">Events</a>
                                         <ul class="navbar-nav nav mx-auto">
                                             <li class="nav-item"><a href="event.html" class="nav-link">Event</a></li>
