--- a/admin/pages/add_course.html
+++ b/admin/pages/add_course.html
@@ -281,12 +281,12 @@
       </div><!-- /.container-fluid -->
     </section>
 
-    <div style="padding-top:10px; padding-left:100px ;" class="container-fluid">
+    <div style="padding-top:10px; padding-left:400px ;" class="container-fluid">
         <div class="row">
             <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
-                <div  style="width: 200px;" class="row">
+                <div class="row">
                     <form>
-                        <div class="form-group">
+                        <div style="width: 600px;" class="form-group">
                             <label for="course_name">Course Name</label>
                             <input type="text" maxlength="100" class="form-control" id="course_name" name="course_name" placeholder="Enter Course Name" required="true">
                         </div>
@@ -335,7 +335,7 @@
 
 
                         <button type="submit" class="btn btn-primary pull-right">Submit</button>
-
+                        <br><br><br><br>
                     </form>
                 </div>
             </div>
