--- a/admin/pages/add_instructor.html
+++ b/admin/pages/add_instructor.html
@@ -291,7 +291,7 @@
             <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-3">
                 <div style="width: 200px;"" class="row">
                     <form>
-                        <div class="form-group">
+                        <div  style="width: 600px;"  class="form-group">
                             <label for="first_name">First Name</label>
                             <input type="text" class="form-control" id="first_name" name="first_name" placeholder="Enter First Name" required>
                         </div>
@@ -350,6 +350,7 @@
                         </div>
 
                         <button type="submit" class="btn btn-primary pull-right">Submit</button>
+<br><br><br><br>
 
                     </form>
                 </div>
