--- a/admin/pages/add_user.html
+++ b/admin/pages/add_user.html
@@ -6,6 +6,7 @@
   <title>Add user</title>
 
   <!-- Google Font: Source Sans Pro -->
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="../plugins/fontawesome-free/css/all.min.css">
@@ -291,7 +292,7 @@
             <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-3">
                 <div style="width: 200px;" class="row">
                     <form>
-                        <div class="form-group">
+                        <div style="width: 600px;" class="form-group">
                             <label for="first_name">First Name</label>
                             <input type="text" class="form-control" id="first_name" name="first_name" placeholder="Enter First Name" required>
                         </div>
@@ -357,7 +358,7 @@
                         </div>
 
                         <button type="submit" class="btn btn-primary pull-right">Submit</button>
-
+                        <br><br><br><br>
                     </form>
                 </div>
             </div>
