--- a/admin/pages/all_instructor.html
+++ b/admin/pages/all_instructor.html
@@ -286,7 +286,7 @@
                 <div class="col-xs-12 sub">
                     <div class="row">
                         <div class="col-xs-12">
-                            <h3><span class="fa fa-users"></span> instructor <button class="btn btn-success m-l-15"><span class="fa fa-plus"></span> Add instructor</button></h3>
+                            <h3><span class="fa fa-users"></span> instructor <button class="btn btn-success m-l-15"><span class="fa fa-plus"></span><a style="text-decoration: none ; color: white;" href="add_instructor.html">Add instructor</a></button></h3>
                             
                         </div>
                         <div class="col-xs-12 col-sm-6 ">
@@ -329,6 +329,7 @@
                                         <td>
                                             <a href="#"><span class="fa fa-edit"></span></a>
                                             <a class="text-success m-l-5" href="#"><span class="fa fa-eye"></span></a>
+                                            <a href="#"><span class="fa fa-trash-alt"></span></a>
                                         </td>
                                     </tr>
                                 </tbody>
