--- a/admin/pages/all_courses.html
+++ b/admin/pages/all_courses.html
@@ -324,6 +324,7 @@
                                     <td>
                                         <a href="#"><span class="fa fa-edit"></span></a>
                                         <a class="text-success m-l-5" href="#"><span class="fa fa-eye"></span></a>
+                                        <a href="#"><span class="fa fa-trash-alt"></span></a>
                                     </td>
                                 </tr>
                                 <tr>
